proportional_edit_objects turns off when translating 3d cursor in edit mode #71436

Closed
opened 2019-11-09 03:15:38 +01:00 by kevin mcginnis · 6 comments

System Information
Operating system: win 10 64 bit
Graphics card: nvidia GTX 780

Blender Version
Broken: 2.80.75
Worked: (optional)

Short description of error

In a startup file I turn on proportional edit in object mode, then I go into edit mode and drag my 3d cursor somewhere (shift right mouse+drag), when I go back to object mode, proportional edit is turned off. This same issue happens in my other blend files except it's in reverse, dragging the 3d cursor in edit always turns on proportional edit in object mode.

Exact steps for others to reproduce the error

turn on proportional edit
change to edit mode
manually drag 3d cursor to a different location
change back to object mode

gif example
https://i.imgur.com/BiKqmVw.jpg

**System Information** Operating system: win 10 64 bit Graphics card: nvidia GTX 780 **Blender Version** Broken: 2.80.75 Worked: (optional) **Short description of error** In a startup file I turn on proportional edit in object mode, then I go into edit mode and drag my 3d cursor somewhere (shift right mouse+drag), when I go back to object mode, proportional edit is turned off. This same issue happens in my other blend files except it's in reverse, dragging the 3d cursor in edit always turns on proportional edit in object mode. **Exact steps for others to reproduce the error** turn on proportional edit change to edit mode manually drag 3d cursor to a different location change back to object mode gif example https://i.imgur.com/BiKqmVw.jpg
Author

Added subscriber: @kevintm

Added subscriber: @kevintm

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2019-11-09 19:28:21 +01:00

I can confirm.
Investigating...

I can confirm. Investigating...

This issue was referenced by 621f62f6ab0bcc5b0649a99be5b400c56bb6cd9b

This issue was referenced by 621f62f6ab0bcc5b0649a99be5b400c56bb6cd9b

This issue was referenced by b720c0f6aa

This issue was referenced by b720c0f6aa688e42ceb136b90d40ec9b5c60a050

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71436
No description provided.