Fix T71436: proportional_edit_objects turns off when translating cursor in edit mode